Add pragmas for database performance tuning
- Turn on WAL mode to stop reads and writes from blocking each other
- Add settings for cache sizes, journal file size limit, WAL
  checkpoint interval

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,26 @@ LOVELIVE_URI='at://did:plc:abcde.../app.bsky.feed.generator/example-fid-name...'
 # (Optional). Only use this if you want a service did different from did:web
 # SERVICE_DID='did:plc:abcde...'
 
+# ---- Database settings ----
+
+# Memory map size in bytes
+# Set to 0 to disable it, negative number for auto
+# Default: 134217728 (128 MB)
+DB_MMAP_SIZE=134217728
+
+# Memory cache size in pages (if positive) or kilobytes (if negative)
+# Default: 2000 (pages)
+DB_CACHE_SIZE=2000
+
+# Journal file size limit in bytes
+# Set to 0 for minimum size, -1 for no limit (not recommended)
+# Default: 134217728 (128 MB)
+DB_JOURNAL_SIZE_LIMIT=134217728
+
+# Interval in blocks when to write from WAL to database file
+# Default: 100
+DB_WAL_AUTOCHECKPOINT=100
+
 # ---- Settings for publish_feed.py ----
 
 # Your Bluesky handle (username)
