Implement updating user lists from real Bluesky lists in background
- Add optional URL parameter to `UserList` container
- Add Bluesky API client, session handling logic into its own module
- Implement functions to retrieve and process list members and update
  user list contents to a fetched list
- Add scheduler using threaded implementation (`BackgroundScheduler`)
  from APScheduler library
- Run the scheduler as part of starting up/shutting down firehose
  clients in `server.app.firehose_setup()`
- Add configs for Bluesky username (handle) and password, required
  for the API client to get list details
- Add configs for list URIs, allow leaving them blank to disable list
  auto updates

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
 # Set this to the hostname that you intend to run the service at
 HOSTNAME='feed.example.com'
 
+# (Optional) Only use this if you want a service DID different from did:web
+# SERVICE_DID='did:plc:abcde...'
+
 # You can obtain it by publishing feed metadata (run publish_feed.py)
 LOVELIVE_URI='at://did:plc:abcde.../app.bsky.feed.generator/example-fid-name...'
 
-# (Optional). Only use this if you want a service did different from did:web
-# SERVICE_DID='did:plc:abcde...'
+# (Optional) URIs of user lists, leave empty or remove to disable autoupdating
+# a list
+LOVELIVE_INCLUDE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
+LOVELIVE_IGNORE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
+
+# ---- API login info ----
+
+# Your Bluesky handle (username)
+HANDLE=''
+
+# Your app password
+PASSWORD=''
 
 # ---- Database settings ----
 
@@ -28,12 +41,8 @@ DB_JOURNAL_SIZE_LIMIT=134217728
 DB_WAL_AUTOCHECKPOINT=100
 
 # ---- Settings for publish_feed.py ----
-
-# Your Bluesky handle (username)
-HANDLE=''
-
-# Your app password
-PASSWORD=''
+# Before you run publish_feed.py, make sure "HANDLE" and "PASSWORD" above are
+# correct for the account where you want to add/update the feed into
 
 # A short name for the record that will show in urls
 # Lowercase with no spaces.
