Allow disabling background user list updates completely
- Make `HANDLE` and `PASSWORD` in config optional
- Don't start scheduler if `HANDLE` and/or `PASSWORD` is missing/unset
  or `HANDLE` is using an invalid format
- Log warnings if auto updating all user lists is disabled

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,16 @@ LOVELIVE_INCLUDE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid
 LOVELIVE_IGNORE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
 
 # ---- API login info ----
+# Leave blank or remove the below variables to disable automatic user list
+# updates entirely
 
 # Your Bluesky handle (username)
+# No need to include the "@" before the username
 HANDLE=''
 
 # Your app password
+# If you don't have one, go to https://bsky.app/settings/app-passwords to
+# generate a new app password, then paste it below
 PASSWORD=''
 
 # ---- Database settings ----
