Allow media posts by users in new list on LoveLive! feed
This will add any new post with pics/videos by users on the list, most
of them being Japanese LoveLive fan artists who probably aren't used to
or are actively refusing to put in matching keywords, hashtags, or alt
text. All other kinds of posts with or without links and/or quoted posts
are processed normally.

This new list is separate but similar to the original Dedicated
LoveLive! Users list

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ LOVELIVE_URI='at://did:plc:abcde.../app.bsky.feed.generator/example-fid-name...'
 # (Optional) URIs of user lists, leave empty or remove to disable autoupdating
 # a list
 LOVELIVE_INCLUDE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
+LOVELIVE_MEDIA_INCLUDE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
 LOVELIVE_IGNORE_LIST_URI='at://did:plc:abcde.../app.bsky.graph.list/example-fid-name...'
 
 # ---- API login info ----
